Improvement of extension, including gallery modal.

--- a/show-images.html
+++ b/show-images.html
@@ -6,6 +6,7 @@
           height: 30px;
           width: 30px;
           outline: none;
+          background-color: green;
         }
       </style>
     </head>
